Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="lecteur">
         <h2>Pitch Shifter</h2>
 
-        <input type="file" id="fileInput" accept="audio/*"><br><br>
+        <input type="file" id="fileInput"><br><br>
 
         <button id="playBtn">Play</button>
         <button id="pauseBtn">Pause</button>
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
